--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -6,9 +6,9 @@ pytz==2021.1
 sqlparse==0.4.1
 whitenoise==5.2.0
 python-dateutil
-beautifulsoup4-4.10.0
-behave-1.2.6
-behave-django-1.4.0
-parse-1.19.0
-parse-type-0.5.2
-soupsieve-2.2.1
+beautifulsoup4==4.10.0
+behave==1.2.6
+behave-django==1.4.0
+parse==1.19.0
+parse-type==0.5.2
+soupsieve==2.2.1
